# opensweep

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh
back_end/: .dockerignore  Dockerfile.dev  Dockerfile.prod  app.py  celery_app.py  config.py  logging_config.py  mcp_app.py  pyproject.toml  redis_config.py  requirements.txt
back_end/api/: dependencies.py  oauth_mcp.py  platform_scope.py
back_end/domains/: tenancy.py
back_end/infrastructure/: artifact_store.py  audit.py  celery_async.py  code_graph.py  dev_reset.py  git_auth.py  git_safety.py  github_app.py  github_app_store.py  github_client.py  github_webhook.py  kill_switch.py  migration_runner.py  neomodel_bootstrap.py  neomodel_config.py  oidc.py  process_role.py  production_guards.py  redis_client.py  run_tokens.py  secretbox.py  state_nonce_store.py  state_signing.py
back_end/migrations/: README.md  __init__.py  m0001_baseline.py  m0002_drop_dead_constraints.py  m0003_org_scoped_llm_providers.py  m0004_git_connection.py  m0005_opensweep_uris.py  m0006_org_agent_overlays.py  m0007_slack_integration.py  m0008_agents_scheduled_agents.py  m0009_drop_overlay_constraints.py  m0010_scheduled_agent_autonomy.py  m0011_run_policy_slim.py  m0012_finding_size.py  m0013_codex_credential_state.py  m0014_campaign_kind_fields.py  m0015_drop_lens_scope.py
back_end/scripts/: linear_import.py  migrate.py  migrate_v3.py  reseed.py  smoke_migration.py
back_end/tests/: conftest.py  fake_redis.py  test_active_runs.py  test_agent_base_seeds.py  test_agent_key_resolution.py  (+174 more)
(+558 files in other folders)
